--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "version": "0.1",
   "manifest_version": 3,
   "icons": {
-    "192": "logo192.png",
-    "512": "logo512.png"
+    "192": "assets/logo192.png",
+    "512": "assets/logo512.png"
   },
   "permissions": ["scripting"],
   "host_permissions": ["*://*.example.com/*"],
