Functionality for button to toggle right side panel: popup.html

--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,12 @@
         "https://www.linkedin.com./in/*"
       ]
     }
+  ],
+
+  "web_accessible_resources": [
+    {
+      "resources": ["popup.html"],
+      "matches": ["https://*/*", "http://*/*"]
+    }
   ]
 }
