--- a/manifest.json
+++ b/manifest.json
@@ -17,9 +17,8 @@
   "content_scripts": [
     {
       "js": ["contentScript.js"],
-      "matches": [
-        "https://www.linkedin.com./in/*"
-      ]
+      "matches": ["https://www.linkedin.com./in/*"],
+      "css": ["./assets/popup.css"]
     }
   ],
 
