Added functionality for exit button within popup.html. Found bug in iframe creation due to contentScript.js being called immediately on page load. Syncing files before debugging.

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
 
   "web_accessible_resources": [
     {
-      "resources": ["popup.html"],
+      "resources": ["popup.html","contentScript.js"],
       "matches": ["https://*/*", "http://*/*"]
     }
   ]
