Introduced dynamically changing popup.html based on text generation in the connection request text box. Popup.html modified to include popup.js as a srcript. Popup.js is included to accept new values from contentScript.js. contentScript.js modified to send a message containing the relevant text changes to the popup.js. Also debugged the iframe so it maintained position during focus changes.

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Rocketstart",
   "description": "Maximize your opportunity to expand your professional network on LinkedIn through text analysis",
   "version": "0.1",
+  "offline_enabled": true,
   "manifest_version": 3,
   "icons": {
     "192": "assets/logo192.png",
