--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,27 @@
     "192": "assets/logo192.png",
     "512": "assets/logo512.png"
   },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "host_permissions": [
+    "https://www.linkedin.com/*/"
+  ],
   "permissions": ["scripting","activeTab","tabs"],
   "homepage_url": "https://rocketstart.careers/",
 
   "content_scripts": [
     {
-      "js": ["contentScript.js"],
-      "matches": ["https://www.linkedin.com/*"]
+      "js": ["listener.js"],
+      "matches": ["https://www.linkedin.com/*/"]
+    },
+    {
+      "js": ["profile.js"],
+      "matches": ["https://www.linkedin.com/in/*/"]
+    },
+    {
+      "js": ["network.js"],
+      "matches": ["https://www.linkedin.com/mynetwork/"]
     }
   ],
 
