Refreshed Rocketstart logo on invitation window to icon. Added styles & animation on hover.

--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
 
   "web_accessible_resources": [
     {
-      "resources": ["popup.html"],
+      "resources": ["popup.html","assets/rocketstartLogo.svg"],
       "css": ["./assets/popup.css"],
       "matches": ["https://www.linkedin.com/*"]
     }
