--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,10 @@
     {
       "js": ["profile.js"],
       "matches": ["https://www.linkedin.com/in/*/"]
+    },
+    {
+      "js": ["network.js"],
+      "matches": ["https://www.linkedin.com/mynetwork/"]
     }
   ],
 
